# SDL2-CPM-CMake-Example

./: CMakeLists.txt  Chess.h  ChessCLI.h  gamelog.txt  main.cpp  main2.cpp
